# porki

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
ci/: check_public_api.py  extract_version.py
docs/: ORCHESTRATOR_SPEC.md  SYSTEMG_UI_SPEC.md  logging-contract.md
porki/: __init__.py  benchmarks.py  cache.py  compiler.py  constants.py  domain_packs.py  effects.py  instruction_schemas.py  instructions.py  intent.py  ir.py  legalizer.py  llm.py  logging_utils.py  memory.py  models.py  orchestrator.py  replan.py  runtime.py  scheduler_policy.py  verification.py  version.py
tests/: conftest.py  test_agent_runtime.py  test_benchmarks.py  test_claude_live.py  test_compiler.py  test_domain_packs.py  test_effects.py  test_heartbeat.py  test_instruction_parser.py  test_instruction_schemas.py  test_integration_local.py  test_intent.py  test_ir.py  test_legalizer.py  test_llm.py  test_logging_utils.py  test_main_cli.py  test_models.py  test_orchestrator.py  test_redis_store.py  test_replan.py  test_runtime.py  test_scheduler_policy.py  test_verification.py  test_version.py
tests/assets/: INSTRUCTIONS.md
